Add workspace colour-coding CLI (Phase 1: Ghostty + Cursor)
Go CLI tool that assigns persistent color schemes to project directories
and launches colour-coordinated Ghostty terminals + Cursor IDE windows.

- 8 named colour palettes with derived colors for each tool
- JSON-based assignment persistence (~/.config/workspace-colours/)
- Ghostty theme file generation and multi-window launching
- Cursor .vscode/settings.json colour customization
- GNU-style flag parsing via pflag (flags work in any position)

--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,8 @@ go.work.sum
 # .idea/
 # .vscode/
 
+# Built binary (anchored to repo root so cmd/workspace/ isn't ignored)
+/workspace
+
 design/
 .claude/
